# RLM_test_set_creation

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_rlm_question.py
deprecated/: README.md
deprecated/rlm-minimal-main/rlm/utils/: llm.py  utils.py
deprecated/v1_src/: __init__.py  config.py  test_set_creator.py
pipeline/: WORKFLOW.md  config.py  main.py  pipeline.py  test_pipeline.py
pipeline/generation/: llm_client.py  prompts.py  qa_generator.py
pipeline/indexing/: entity_extractor.py  search_index.py
pipeline/parsing/: document.py
pipeline/selection/: diversity.py  strategies.py
pipeline/validation/: validator.py
rlm-minimal-main/rlm/: repl.py
rlm-minimal-main/rlm/utils/: prompts.py
src/: config.py  question_generators.py  rlm_integration.py  test_set_creator.py
test-set-viewer/: bs-config.json  index.html  package-lock.json  package.json  tsconfig.json
test-set-viewer/src/: app.ts
test-set-viewer/styles/: main.css
v2_test_set_creation/: WORKFLOW.md  config.py  main.py  mlflow_v2.db  pipeline.py  test_pipeline.py
v2_test_set_creation/generation/: prompts.py  qa_generator.py
v2_test_set_creation/indexing/: entity_extractor.py
v2_test_set_creation/parsing/: pdf_parser.py  text_parser.py
v2_test_set_creation/selection/: strategies.py
v2_test_set_creation/validation/: validator.py
